@@ -5,10 +5,11 @@ use Test::More tests => 30;
 
 use Spreadsheet::HTML;
 
-my $table = Spreadsheet::HTML->new( data => [[1],[2]] );
+my $table = Spreadsheet::HTML->new( );
 
-ok $table->layout,                          "layout by method";
-ok Spreadsheet::HTML::layout,               "layout by procedure";
+my $layout = '<table border="0" cellpadding="0" cellspacing="0" role="presentation"><tr><td>&nbsp;</td></tr></table>';
+is $table->layout, $layout,                          "layout by method";
+is Spreadsheet::HTML::layout, $layout,               "layout by procedure";
 
 ok $table->handson,                         "handson by method";
 ok Spreadsheet::HTML::handson,              "handson by procedure";
@@ -16,11 +17,11 @@ ok Spreadsheet::HTML::handson,              "handson by procedure";
 ok $table->checkerboard,                    "checkerboard by method";
 ok Spreadsheet::HTML::checkerboard,         "checkerboard by procedure";
 
-ok $table->animate,                         "animate by method";
-ok Spreadsheet::HTML::animate,              "animate by procedure";
-
-ok $table->generate( animate => 1 ),            "animate by method param";
-ok Spreadsheet::HTML::generate( animate => 1 ), "animate by procedure param";
+my $animate = '<table><caption align="bottom"><button id="toggle" onClick="toggle()">Start</button></caption><tr><th class="animate" id="0-0">&nbsp;</th></tr></table>';
+is @{ [ $table->animate ] }[0], $animate,                   "animate by method";
+is @{ [ Spreadsheet::HTML::animate ] }[0], $animate,        "animate by procedure";
+is @{ [ $table->generate( animate => 1 ) ] }[0], $animate,  "animate by method";
+is @{ [ Spreadsheet::HTML::generate( animate => 1 ) ] }[0], $animate, "animate by procedure";
 
 ok $table->banner,                          "banner by method";
 ok Spreadsheet::HTML::banner,               "banner by procedure";
